Fix sidebar height
The sidebar had a height of 100% but started under the nav-bar, meaning
it extended down too far and created some weird white space at the
bottom of the page. This changes it to start at the top of page, have a
height of 100%, and added a spacer div with a height equal to the
height of the nav-bar to the top of the sidebar, to push its elements
down.

--- a/static/css/jstinker.css
+++ b/static/css/jstinker.css
@@ -39,7 +39,7 @@ body {
     font-size: 11px;
     width: 217px;
     position: absolute;
-    top: 51px;
+    top: 0;
     left: 0;
     background-color: #fff;
     color: #444;
@@ -55,6 +55,7 @@ body {
     margin-bottom: 0px;
     min-height: 50px;
     position: relative;
+    z-index: 1;
 }
 
 .navbar-default .navbar-brand {
